# nordic-engine

./: Cargo.toml  README.md
res/: lute.mtl
src/: main.rs
src/core/: app.rs  instance.rs  mod.rs  model.rs  render.rs  resources.rs  shader.wgsl  texture.rs  vertex.rs  window.rs
src/core/app/: mod.rs
src/core/camera/: camera.rs  camera_controller.rs  camera_uniform.rs
src/core/event/: event_category.rs  event_handler.rs  event_macros.rs  mod.rs
src/core/window/: mod.rs
