[package]
name = "nordic-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
wgpu = "0.17.0"
winit = "0.28.6"
