[package]
name = "nordic-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
wgpu = "0.17.0"
winit = "0.28.6"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18.0"
tobj = { version = "4.0.0", features = ["async"] }
cfg-if = "1.0.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
